# libqualia

./: .gitignore  .gitmodules  CMakeLists.txt  libqualia.geany  openssl.cmake  wolfssl.cmake
certs/: file2header.c  genkeys_ed25519.sh  genkeys_falcon1024.sh
include/: qualia.h  qualia.hpp  qualiatls.h  qualiatls.hpp
src/: pyapi.cpp  qualia.c  qualiatls.c
tests/: client.py  server.py  tests.c
